tests/cases/fail/multi_declaration_type_mismatch.u
-> main() {
  int32 a, b = true.
  0i!
}
